tests/types/errors/binary_operator_type_error.mochi
let x = "a" * 3.14 // string * float = invalid